# finder_home_electric_charger

./: .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  migrate.py  migration.Dockerfile  pyproject.toml  token.py
alembic/: env.py
alembic/versions/: 0677511dc2b9_add_booking_table.py  15cf224f16b0_add_review_and_modification_table.py  1a083d1e1960_drop_booking_table.py  2025_06_29_2315-420e5c313c30_drop_some_tbale.py  2025_06_29_2323-0b26f2e66227_modify_user_table.py  2025_06_30_0124-f9df9fb9ff49_modify_user_table.py  2025_06_30_2352-c744e71b814f_update_location.py  2025_07_01_2252-6ff4d7363af8_update_location.py  2025_07_02_1957-3a1a21ff70cd_remove_activity.py  2025_07_03_1203-740ba91ef7dc_update_user_and_booking.py  2025_07_04_1802-29eefa075ae8_update_user.py  2025_07_09_0930-19b8bdec6bc9_update_user.py  2025_07_12_0906-a42daa3ae731_add_currency.py  2025_07_12_0954-bb557dc9db1d_edit_pricing.py  2025_07_14_0915-c4168d66a50d_add_timestamp_for_email_and_phone.py  2025_07_14_2340-7910e2b92862_modify_user_table.py  2025_07_14_2340-d709069a8ea9_modify_user_table.py  2025_07_20_1350-fd551f97f924_update_charging_loc.py  2025_07_22_2322-85be4bd6e5a7_modify_charger_location_table.py  2025_07_22_2328-ddb295f437b0_modify_charger_location_table.py  2025_07_23_2317-316a87a8b13a_update_latitud.py  2025_08_17_1454-2237c1d34f69_add_country.py  2025_09_10_1200-add_public_chargers_table.py  2025_09_11_1010-add_has_accommodation.py  (+7 more)
docs/: delete-account.html  privacy-policy.html  terms-of-service.html
src/: database.db  database.db-journal  main.py
src/config/: base.py  (+3 more)
(+56 files in other folders)
